# rust-gpu-egui-example

./: Cargo.toml  README.md  flake.nix
egui_demo_app/: Cargo.toml
egui_demo_app/src/: backend_panel.rs  lib.rs  main.rs  wrap_app.rs
egui_demo_app/src/apps/: custom3d_wgpu.rs  mod.rs
shaders/mandelbrot/src/: lib.rs
shaders/shared/: Cargo.toml
shaders/shared/src/: lib.rs
