[workspace]
resolver = "2"
members = [
  "egui_demo_app",
  "shaders/mandelbrot",
]
default-members = ["egui_demo_app"]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
spirv-std = "0.9.0"
spirv-builder = { version = "0.9.0", default-features = false }
