[package]
name = "egui_demo_app"
version = "0.21.0"
# authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
# license = "MIT OR Apache-2.0"
# edition = "2021"
# rust-version = "1.65"
# publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
# default-run = "egui_demo_app"

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["persistence", "use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

http = ["ehttp", "image", "poll-promise", "egui_extras/image"]
persistence = ["eframe/persistence", "egui/persistence", "serde"]
web_screen_reader = ["eframe/web_screen_reader"]                  # experimental
serde = ["dep:serde", "egui_demo_lib/serde", "egui/serde"]
syntax_highlighting = ["egui_demo_lib/syntax_highlighting"]


[dependencies]
chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
eframe = { version = "0.21.0", default-features = false, features = ["wgpu"] }
egui = { version = "0.21.0", features = ["extra_debug_asserts"] }
egui_demo_lib = { version = "0.21.0", features = ["chrono"] }
tracing = "0.1"

shared = { path = "../shaders/shared" }
egui-wgpu = { version = "0.21.0" }
wgpu = { version = "0.15.0", features = ["webgl", "spirv", "vulkan-portability"] }
spirv-builder = { workspace = true, features = ["watch"] }
spirv-std = { workspace = true }
bytemuck = { version = "1.7.1" }

# Optional dependencies:
egui_extras = { version = "0.21.0", optional = true }

# feature "http":
ehttp = { version = "0.2.0", optional = true }
image = { version = "0.24", optional = true, default-features = false, features = [
  "jpeg",
  "png",
] }
poll-promise = { version = "0.2", optional = true, default-features = false }

# feature "persistence":
serde = { version = "1", optional = true, features = ["derive"] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
